scm-ui/ui-styles/src/components/_main.scss
/* ... */
// panels
.panel {
  border: 1px solid $border;
  border-radius: 0.25rem;

  .panel-heading {
    border: none;
    border-bottom: 1px solid $border;
    border-radius: 0.25rem 0.25rem 0 0;

    > .field {
      margin-bottom: 0; // replace selector margin
    }
  }

  .panel-block {
    display: block;
    border: none;
  }

  .panel-footer {
    background-color: whitesmoke;
    color: #363636;
    font-size: 1.25em;
    font-weight: 300;
    line-height: 1.25;
    padding: 0.5em 0.75em;
    border: none;
    border-top: 1px solid $border;
    border-radius: 0 0 0.25rem 0.25rem;
  }
}

// forms
form .field:not(.is-grouped) {
  margin-bottom: 1rem;
}
.input,
.select select,
.textarea,
.file-name {
  box-shadow: none;
}

.select,
.select:hover {
  &:not(.is-multiple):not(.is-loading) {
    &.disabled::after {
      border-color: #7a7a7a;
    }
  }
}

.help {
  position: absolute;
}

// label with help-icon compensation
.label-icon-spacing {
  margin-top: 30px;

  @media screen and (max-width: 768px) {
    margin-top: 0;
  }
}

// pagination
.pagination-next,
.pagination-link,
.pagination-ellipsis {
  padding-left: 1.5em;
  padding-right: 1.5em;
  height: 2.8rem;
  min-width: 5rem;
}
.pagination-previous,
.pagination-next {
  height: 2.8rem;
  min-width: 6.75em;
}
.pagination-previous[disabled],
.pagination-next[disabled] {
  background-color: #ededed;
  color: #bcbcbc;
}
.pagination-link.is-current {
  opacity: 1;
}

.has-scm-background {
  background-image: url(images/scmManagerHero.jpg) !important;
  background-size: cover;
  background-position: top center;
  background-color: #002e4b;
}

// hero
.hero.is-dark {
  background-color: #002e4b;
  background-image: url(images/scmManagerHero.jpg);
  background-size: cover;
  background-position: top center;

  .tabs.is-boxed li.is-active a,
  .tabs.is-boxed li.is-active a:hover,
  .tabs.is-toggle li.is-active a,
  .tabs.is-toggle li.is-active a:hover {
    background-color: #28b1e8;
    border-color: #28b1e8;
    color: #fff;
  }
}

// aside
.aside-background {
  bottom: 0;
  left: 50%;
  position: absolute;
  right: 0;
  top: 0;
  background-color: whitesmoke;
}

// menu
.menu {
  div {
    height: 100%;
    margin-bottom: 1rem;
  }
}
.menu-label {
  display: flex;
  height: 3.2rem;
  align-items: center;
  color: #fff;
  font-size: 1em;
  font-weight: 600;
  background-color: $blue;
  border-radius: 5px 5px 0 0;
  padding: 0.5rem 1rem;
  text-transform: none;

  &:last-child,
  &:not(:last-child) {
    margin-bottom: 0;
  }
}
.menu-list {
  a {
    color: #333;
    padding: 1rem;

    &.is-active {
      color: $info;
      background-color: #fff;
    }
  }

  > li {
    ul {
      margin: 0;
      border-top: 1px solid $white-ter;

      li {
        border-right: none;
      }
      li:last-child {
        border-bottom: none;
      }
    }

    > a.is-active:before {
      position: relative;
      content: " ";
      background: $blue;
      height: 53px;
      width: 2px;
      display: block;
      left: -17px;
      float: left;
      top: -16px;
    }

    border-radius: 0;
    border-top: 1px solid $white-ter;
    border-left: 1px solid $white-ter;
    border-right: 1px solid $white-ter;
  }
  > li:first-child {
    border-top: none;
  }
  li:last-child {
    border-bottom: 1px solid $white-ter;
  }
  div {
    margin-bottom: 0;
  }
}

.sub-menu li {
  line-height: 1;

  a {
    padding: 0.75rem 1rem;
  }

  a:before {
    font-family: "Font Awesome 5 Free"; /* NOSONAR */
    font-weight: 900;
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
    line-height: 1;
    content: "\f105";
    padding-right: 5px;
  }

  i {
    display: none;
  }
}

// modal
.modal-card {
  border-radius: 6px;

  .modal-card-foot {
    justify-content: flex-end; // pulled-right
  }
}

// radio
//overwrite bulma's default margin
.radio + .radio {
  margin-left: 0;
}

// NOTE: use .is-clickable instead!
.has-cursor-pointer {
  cursor: pointer;
}

// fix tooltip bug in firefox
// for bulma-tooltip v3.0.0
[data-tooltip]:not(.is-disabled).has-tooltip-right::after,
[data-tooltip]:not(.is-loading).has-tooltip-right::after,
[data-tooltip]:not([disabled]).has-tooltip-right::after,
[data-tooltip]:not(.is-disabled).has-tooltip-left::after,
[data-tooltip]:not(.is-loading).has-tooltip-left::after,
[data-tooltip]:not([disabled]).has-tooltip-left::after {
  height: 12px;
}

.diff-gutter-conflict {
  background: $warning-50;
}

.diff-code-conflict {
  background: $warning-25;
}

.small-loading-spinner {
  position: relative;
  pointer-events: none;
  &:after {
    @include loader;
  }
}

.sg-sub-section + .sg-sub-section {
  margin-top: 2.5rem;
}

.has-text-inherit {
  color: inherit !important;
}

.has-text-default {
  color: $text !important;
}

.autocomplete-entry__option--is-focused {
  background-color: $link !important;
  color: $link-invert !important;
}

.autocomplete-entry__single-value {
  color: $text !important;
}

.autocomplete-entry__control--is-focused {
  border-color: $input-focus-border-color !important;
}

.autocomplete-entry {
}
.autocomplete-entry > div {
  color: $text-strong !important;
}

.autocomplete-entry__menu {
  background-color: $background !important;
}

.autocomplete-entry__control {
  background-color: $scheme-main !important;
  border-color: $input-border-color !important;
}

.autocomplete-entry__control:hover {
  border-color: $input-hover-border-color !important;
}

.autocomplete-entry__control:focus {
  border-color: $input-focus-border-color !important;
}

.autocomplete-entry__input {
  color: $text-strong !important;
}

